--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,9 +18,10 @@ services:
     image: tomcat:9-jdk11
     restart: always
     environment:
-      - CATALINA_OPTS=-Ddb.name=${DB_NAME} -Ddb.user=${DB_USER} -Ddb.pass=${DB_PASS} -Duser.timezone=Europe/Berlin -Dspring.profiles.active=myprofile -Djava.awt.headless=true -Djava.net.preferIPv4Stack=true -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=.
+      - CATALINA_OPTS=-Ddb.host=${DB_HOST} -Ddb.port=${DB_PORT} -Ddb.name=${DB_NAME} -Ddb.user=${DB_USER} -Ddb.pass=${DB_PASS} -Duser.timezone=Europe/Berlin -Dspring.profiles.active=myprofile -Djava.awt.headless=true -Djava.net.preferIPv4Stack=true -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=.
     volumes:
       - ./openolat/openolat_${OLAT_VERSION}:/opt/openolat/webapp
+      - ./themes/impavit:/opt/openolat/webapp/static/themes/impavit
       - ./tomcat/server.xml:/usr/local/tomcat/conf/server.xml
       - ./tomcat/context.xml:/usr/local/tomcat/conf/Catalina/localhost/ROOT.xml
       - ./tomcat/olat.local.properties:/usr/local/tomcat/lib/olat.local.properties
@@ -29,7 +30,6 @@ services:
       - openolat
     ports:
       - 127.0.0.1:${OLAT_PORT}:8088
-
 
 networks:
   openolat:
