--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       - ./data/pgdata:/var/lib/postgresql/data
     networks:
       - openolat
-
+    
   olat:
     image: tomcat:9-jdk11
     restart: always
@@ -28,6 +28,8 @@ services:
       - ./data/olatdata:/opt/openolat/olatdata
     networks:
       - openolat
+    ports:
+      - 127.0.0.1:${OLAT_PORT}:8088
     depends_on:
       - db
 
@@ -46,19 +48,8 @@ services:
       GIN_MODE: debug
     networks:
       - openolat
-
-  nginx:
-    restart: always
-    image: nginx:latest
-    environment:
-      SERVER_NAME: ${SERVER_NAME}
-    volumes:
-      - ./nginx/gzip.conf:/etc/nginx/conf.d/gzip.conf
-      - ./nginx/vhost.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - 127.0.0.1:${NGINX_PORT}:80
-    networks:
-      - openolat
+      - 127.0.0.1:${ATHENA_PORT}:8080
 
 networks:
   openolat:
