--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,11 +21,13 @@ services:
       - CATALINA_OPTS=-Ddb.host=${DB_HOST} -Ddb.port=${DB_PORT} -Ddb.name=${DB_NAME} -Ddb.user=${DB_USER} -Ddb.pass=${DB_PASS} -Duser.timezone=Europe/Berlin -Dspring.profiles.active=myprofile -Djava.awt.headless=true -Djava.net.preferIPv4Stack=true -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=.
     volumes:
       - ./openolat/openolat_${OLAT_VERSION}:/opt/openolat/webapp
+      - ./tomcat/log4j2.xml:/opt/openolat/webapp/WEB-INF/classes/log4j2.xml
       - ./themes/impavit:/opt/openolat/webapp/static/themes/impavit
       - ./tomcat/server.xml:/usr/local/tomcat/conf/server.xml
       - ./tomcat/context.xml:/usr/local/tomcat/conf/Catalina/localhost/ROOT.xml
       - ./tomcat/olat.local.properties:/usr/local/tomcat/lib/olat.local.properties
       - ./data/olatdata:/opt/openolat/olatdata
+      - ./data/logs:/opt/openolat/logs
     networks:
       - openolat
     ports:
