Updated configuration hints in README.md

--- a/vhost.conf
+++ b/vhost.conf
@@ -6,7 +6,7 @@ server {
 
    location /_pdf/ {
     rewrite ^/_pdf/?(.*)$ /$1 break;
-    proxy_pass http://athena:8080;
+    proxy_pass http://localhost:${ATHENA_PORT};
     proxy_http_version 1.1;
     proxy_set_header X-Forwarded-Host $host;
     proxy_set_header X-Forwarded-Server $host;
@@ -24,7 +24,7 @@ server {
 
   location / {
     rewrite ^/(.*)$ /$1 break;
-    proxy_pass http://olat:8088;
+    proxy_pass http://olat:${OLAT_PORT};
     proxy_http_version 1.1;
     proxy_set_header X-Forwarded-Host $host;
     proxy_set_header X-Forwarded-Server $host;
